[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "acme-serverless-client"
version = "0.1.0"
authors = [{name = "Konstantin Alekseev", email = "mail@kalekseev.com"}]
description = "ACME client for serverless environment"
keywords = ["serverless", "acme"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "acme>=2.0,<3.0",
    "cryptography>=35.0",
    "josepy>=1.3.0,<2.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/kalekseev/acme-serverless-client"

[project.optional-dependencies]
dev = [
    "ruff",
    "boto3>=1.14,<2.0",
    "moto>=4.0,<5.0",
    "mypy>=0.782",
    "pdbpp>=0.10",
    "pytest>=7.0,<8.0",
    "pytest-cov>=4.0,<5.0",
    "time-machine>=2.0,<3.0",
    "types-pyOpenSSL",
    "boto3-stubs",
    "botocore-stubs",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
acme_serverless_client = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using or importing the ABCs.*:DeprecationWarning",
    "ignore:the imp module is deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
omit = ["*tests*"]

[tool.ruff]
src = ["src"]
target-version = "py38"

select = [
  'B',
  'C',
  'E',
  'F',
  'N',
  'W',
  'UP',
  'SIM',
  'RUF',
  'PL',
  'INP',
  'I',
  'FIX003'
]
