[metadata]
name = acme-serverless-client
version = 0.1.0
author = Konstantin Alekseev
author_email = mail@kalekseev.com
description = ACME client for serverless environment
keywords = serverless, acme
url = https://github.com/kalekseev/acme-serverless-client
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
package_dir=
    =src
packages = find:
install_requires =
    acme>=2.0,<3.0
    cryptography>=35.0
    josepy>=1.3.0,<2.0
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
acme_serverless_client = py.typed

[options.extras_require]
dev =
    black
    boto3>=1.14,<2.0
    flake8>=3.8
    flake8-bugbear>=20.0
    isort>=5.0,<6.0
    moto>=4.0,<5.0
    mypy>=0.782
    pdbpp>=0.10
    pytest>=7.0,<8.0
    pytest-cov>=4.0,<5.0
    time-machine>=2.0,<3.0
    types-pyOpenSSL
    boto3-stubs
    botocore-stubs

[flake8]
max-line-length = 88
select = C,E,F,W,B
ignore = E203, E501, W503

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore:Using or importing the ABCs.*:DeprecationWarning
    ignore:the imp module is deprecated.*:DeprecationWarning

[coverage:run]
omit = *tests*
